--- a/templates/payment_success.html
+++ b/templates/payment_success.html
@@ -6,7 +6,7 @@
         <h4>Оплата прошла успешно!</h4>
         <p>Спасибо за покупку книги "{{ book.Title }}".</p>
         <p>Сумма: ${{ "%.2f"|format(book.Cost) }}</p>
-        <a href="{{ url_for('book_detail', id=book.id) }}" class="btn btn-primary">
+        <a href="{{ url_for('book_detail', id=book.id) }}" class="link-custom">
             Перейти к книге
         </a>
     </div>
