--- a/templates/payment_cancelled.html
+++ b/templates/payment_cancelled.html
@@ -5,6 +5,13 @@
     <div class="alert alert-warning">
         <h4>Оплата отменена</h4>
         <p>Вы отменили оплату книги "{{ order.book.Title }}".</p>
+        {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                {% for message in messages %}
+                    <p class="item ms-3" >{{ message }}</p>
+                {% endfor %}
+            {% endif %}
+        {% endwith %}
         <a href="{{ url_for('book_detail', id=order.book.id) }}" class="btn btn-primary">
             Вернуться к книге
         </a>
