--- a/templates/Main.html
+++ b/templates/Main.html
@@ -10,10 +10,11 @@
         {% if books|length > 0 %}
             {% for book in books %}
             <div class="col-md-6 item">
-                <a href="{{ url_for('book_detail', id=book.id) }}"><h4>{{book.Title}}</h4></a>
+                <a href="{{ url_for('book_detail', id=book.id) }}" class="link-custom"><h4>{{book.Title}}</h4></a>
                 
                 <img class="cover__img" src="{{url_for('static', filename=book.Cover)}}" alt="{{book.Title}}">
                 <p>{{book.Author}}</p>
+                <p class="link-custom-pay">{{book.Cost}}</p>
             </div>
             {% endfor %}
         {%else%}
