--- a/templates/Book.html
+++ b/templates/Book.html
@@ -39,9 +39,9 @@
       <a href="{{ url_for('read_book', book_id=book.id) }}" class="button-custom me-2">Читать</a><br>
     {%endif%}
     {%if existing_bookmark == False: %}
-      <a class="link-custom-pay me-2">Цена: {{ book.Cost }} USD</a>
+      <a class="link-custom-pay ">Цена: {{ book.Cost }} USD</a>
       <form action="{{ url_for('create_payment', book_id=book.id) }}" method="POST">
-      <button type="submit" class="button-custom me-2">Купить через PayPal</button>
+      <button type="submit" class="button-custom ">Купить через PayPal</button>
       </form>
     {%endif%}
     <!--
