--- a/templates/Book.html
+++ b/templates/Book.html
@@ -37,13 +37,14 @@
     <p>{{ book.About }}</p>
     {%if admin or existing_bookmark: %} 
       <a href="{{ url_for('read_book', book_id=book.id) }}" class="button-custom me-2">Читать</a><br>
-    {%endif%}
-    {%if existing_bookmark == False: %}
+    {%else%}
       <a class="link-custom-pay ">Цена: {{ book.Cost }} USD</a>
       <form action="{{ url_for('create_payment', book_id=book.id) }}" method="POST">
       <button type="submit" class="button-custom ">Купить через PayPal</button>
       </form>
     {%endif%}
+
+
     <!--
           {%if 'username' in session and admin == False and existing_bookmark == False: %}
           <form action="{{ url_for('add_bookmark', book_id=book.id) }}" method="post" id="bookmarkForm">
