--- a/templates/Book_edit.html
+++ b/templates/Book_edit.html
@@ -13,6 +13,7 @@
     <input type="text" name="about" placeholder="Описание" class="form-control" value="{{edited.About}}"><br>
     <input type="text" name="cover" placeholder="Обложка" class="form-control" value="{{edited.Cover}}"><br>
     <input type="text" name="file_path" placeholder="Путь к файлу" class="form-control" value="{{edited.File_path}}"><br>
+     <input type="text" name="cost" placeholder="Цена книги" class="form-control" value="{{edited.Cost}}"><br>
     <button class="button-custom" type="submit">Изменить</button>
 </form>
 {% endblock%}
