--- a/templates/Book.html
+++ b/templates/Book.html
@@ -38,7 +38,7 @@
     {%if admin or existing_bookmark: %} 
       <a href="{{ url_for('read_book', book_id=book.id) }}" class="button-custom me-2">Читать</a><br>
     {%else%}
-      <div style="display: flex; justify-content: space-between;">
+      <div style="display: flex;">
         <a class="link-custom-pay ">Цена: {{ book.Cost }} USD</a>
         <form action="{{ url_for('create_payment', book_id=book.id) }}" method="POST">
         <button type="submit" class="button-custom ">Купить через PayPal</button>
