--- a/templates/payment_cancelled.html
+++ b/templates/payment_cancelled.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block content %}
+{% block body %}
 <div class="container mt-5">
     <div class="alert alert-warning">
         <h4>Оплата отменена</h4>
