--- a/templates/payment_failed.html
+++ b/templates/payment_failed.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block content %}
+{% block body %}
 <div class="container mt-5">
     <div class="alert alert-danger">
         <h4>Ошибка оплаты</h4>
