--- a/templates/payment_success.html
+++ b/templates/payment_success.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block content %}
+{% block body %}
 <div class="container mt-5">
     <div class="alert alert-success">
         <h4>Оплата прошла успешно!</h4>
