--- a/templates/read_book.html
+++ b/templates/read_book.html
@@ -7,7 +7,7 @@
 {% block body %}
 <div class="container">
     <div class="content">
-        <iframe src="{{ file_url }}" width="100%" height="1000px"></iframe>
+        <iframe src="{{ pdf_url }}" width="100%" height="1000px"></iframe>
     </div>
 </div>
 
